SLNET_x  = GitHub pull request / issue number (project: SLikeSoft/SLikeNet)
SECURITY = special marker to indicate fixes related to security issues

If you require a more detailed list on the changes, please refer to the
Subversion repository history at: https://www.slikesoft.com/svn/slikenet/

version 0.2.0 (xx-xx-xxxx xx:xx UTC)
General:
  * extended supported compilers to VS 2017 15.4.1 (#163)
  * several smaller changes, fixes, and code cleanup (#130, #136)
Samples:
  General:
    * add validation for user provided port numbers/number of connections throughout applicable samples (#145)
Building:
  General:
    * change projects to consistently use warning level 4 in all configurations with Visual Studio (#128, #129, #135, #137, #138, #139, #140, #142, #144, #146, #147, #149, #151, #152, #153, #154, #155, #162)

version 0.1.1 (xx-xx-xxxx xx:xx UTC)
*** This release satisfies/processes 2 GitHub pull request
General:
  * several smaller fixes (#105, #156)
  * changed GitHub pullrequest markers to support pull requests from different GitHub forks (#105)
  * dropped optional license requirement to notifiy "Mersenne Twister"-algorithm devs due to lack of valid contact information (#105)
  * corrected text encoding throughout all files (#116)
  * several small documentation updates (#105, #112 - SLNET_10)
Core:
  RakNetSocket2:
    * fixed certain error messages producing garbled output in unicode configurations (#119)
  SocketLayer:
    * fixed certain error messages producing garbled output in unicode configurations (#119)
  TCPInterface:
    * fixed memory leak upon stopping TCP servers (#125)
Extensions:
  Autopatcher:
    * fixed crash/undefined behavior upon file read error in postgreSQL-based Autopatcher (#143)
  Lobby2:
    * fixed Clans_GetMemberProperties::clanMemberState not being populated (#141)
Samples:
  ComprehensiveTest:
    * fixed very rare occasional crash (#148)
  Lobby3: