@@ -3,7 +3,7 @@
 # Please see licenses/RakNet license.txt for the underlying license and related copyright.
 #
 #
-# Modified work: Copyright (c) 2017, SLikeSoft UG (haftungsbeschränkt)
+# Modified work: Copyright (c) 2017-2018, SLikeSoft UG (haftungsbeschränkt)
 #
 # This source code was modified by SLikeSoft. Modifications are licensed under the MIT-style
 # license found in the license.txt file in the root directory of this source tree.
@@ -13,6 +13,8 @@ cmake_minimum_required(VERSION 2.6)
 project(RakNetDLL)
 
 FILE(GLOB ALL_HEADER_SRCS ${RakNet_SOURCE_DIR}/Source/include/slikenet/*.h)
+FILE(GLOB ALL_COMPATIBILITY_HEADER_SRC ${RakNet_SOURCE_DIR}/Source/*.h)
+FILE(GLOB ALL_COMPATIBILITY_HEADER_SRC_2 ${RakNet_SOURCE_DIR}/Source/slikenet/*.h)
 FILE(GLOB ALL_CPP_SRCS ${RakNet_SOURCE_DIR}/Source/src/*.cpp)
 
 
@@ -24,9 +26,10 @@ IF(WIN32 AND NOT UNIX)
 	SET( CMAKE_CXX_FLAGS "/D WIN32 /D _RAKNET_DLL /D _CRT_NONSTDC_NO_DEPRECATE /D _CRT_SECURE_NO_DEPRECATE /GS- /GR- ")
 ENDIF(WIN32 AND NOT UNIX)
 
-IF(WIN32 AND NOT UNIX)
-	target_link_libraries (RakNetDLL ${RAKNET_LIBRARY_LIBS})
-ELSE(WIN32 AND NOT UNIX)
-	target_link_libraries (RakNetDLL ${RAKNET_LIBRARY_LIBS})
-	INSTALL(TARGETS RakNetDLL DESTINATION ${RakNet_SOURCE_DIR}/Lib/DLL)
-ENDIF(WIN32 AND NOT UNIX)
+target_link_libraries (RakNetDLL ${RAKNET_LIBRARY_LIBS})
+IF(NOT WIN32 OR UNIX)
+	install(TARGETS RakNetDLL DESTINATION lib)
+	INSTALL(FILES ${ALL_COMPATIBILITY_HEADER_SRC} DESTINATION include/raknet)
+	INSTALL(FILES ${ALL_COMPATIBILITY_HEADER_SRC_2} DESTINATION include/raknet/slikenet)
+	INSTALL(FILES ${ALL_HEADER_SRCS} DESTINATION include/raknet/include/slikenet)
+ENDIF(NOT WIN32 OR UNIX)
