@@ -25,9 +25,8 @@ IF(WIN32 AND NOT UNIX)
 	SET( CMAKE_CXX_FLAGS "/D WIN32 /D _RAKNET_LIB /D _CRT_NONSTDC_NO_DEPRECATE /D _CRT_SECURE_NO_DEPRECATE /GS- /GR- ")
 ENDIF(WIN32 AND NOT UNIX)
 
+target_link_libraries (RakNetLibStatic ${RAKNET_LIBRARY_LIBS})
 IF(WIN32 AND NOT UNIX)
-	target_link_libraries (RakNetLibStatic ${RAKNET_LIBRARY_LIBS})
-
 	IF(NOT ${CMAKE_GENERATOR} STREQUAL "MSYS Makefiles")
 
 		IF( MSVC10 OR MSVC11 OR MSVC12 OR MSVC14 )
@@ -37,13 +36,9 @@ IF(WIN32 AND NOT UNIX)
 		ENDIF()
 				
 	ENDIF(NOT ${CMAKE_GENERATOR} STREQUAL "MSYS Makefiles")
-
 ELSE(WIN32 AND NOT UNIX)
-	target_link_libraries (RakNetLibStatic ${RAKNET_LIBRARY_LIBS})
-	INSTALL(TARGETS RakNetLibStatic DESTINATION ${RakNet_SOURCE_DIR}/Lib/RakNetLibStatic)
-	INSTALL(FILES ${ALL_COMPATIBILITY_HEADER_SRC} DESTINATION ${RakNet_SOURCE_DIR}/include/raknet)
-	INSTALL(FILES ${ALL_COMPATIBILITY_HEADER_SRC_2} DESTINATION ${RakNet_SOURCE_DIR}/include/raknet/slikenet)
-	INSTALL(FILES ${ALL_HEADER_SRCS} DESTINATION ${RakNet_SOURCE_DIR}/include/raknet/include/slikenet)
+	INSTALL(TARGETS RakNetLibStatic DESTINATION lib)
+	INSTALL(FILES ${ALL_COMPATIBILITY_HEADER_SRC} DESTINATION include/raknet)
+	INSTALL(FILES ${ALL_COMPATIBILITY_HEADER_SRC_2} DESTINATION include/raknet/slikenet)
+	INSTALL(FILES ${ALL_HEADER_SRCS} DESTINATION include/raknet/include/slikenet)
 ENDIF(WIN32 AND NOT UNIX)
-
-
