@@ -12,6 +12,7 @@ If you require a more detailed list on the changes, please refer to the
 Subversion repository history at: https://www.slikesoft.com/svn/slikenet/
 
 version 0.2.0 (xx-xx-xxxx xx:xx UTC)
+*** This release satisfies/processes 1 partial GitHub pull request
 General:
   * extended supported compilers to VS 2017 15.4.1 (#163)
   * several smaller changes, fixes, and code cleanup (#130, #136)
@@ -21,11 +22,13 @@ Samples:
 Building:
   General:
     * change projects to consistently use warning level 4 in all configurations with Visual Studio (#128, #129, #135, #137, #138, #139, #140, #142, #144, #146, #147, #149, #151, #152, #153, #154, #155, #162)
+  CMake:
+    * changed default install location for SLikeNet to CMAKE_INSTALL_PREFIX-based include/lib directories (#54 - RAKNET_29)
 
 version 0.1.1 (xx-xx-xxxx xx:xx UTC)
-*** This release satisfies/processes 2 GitHub pull request
+*** This release satisfies/processes 2 complete and 1 partial GitHub pull request
 General:
-  * several smaller fixes (#105, #156)
+  * several smaller changes, fixes, and code cleanup (#105, #156, #165 - RAKNET_29)
   * changed GitHub pullrequest markers to support pull requests from different GitHub forks (#105)
   * dropped optional license requirement to notifiy "Mersenne Twister"-algorithm devs due to lack of valid contact information (#105)
   * corrected text encoding throughout all files (#116)
@@ -66,6 +69,7 @@ Building:
     * enabled treating compile warnings as errors in the VS project file (#105)
   CMake:
     * fixed make install not constructing a RakNet backwards compatible include structure (#115)
+    * fixed installing SLikeNet without RAKNET_ENABLE_STATIC being set, not installing the header files (#165 - RAKNET_29)
 
 version 0.1.0 (07-26-2017 21:00 UTC)
 *** This release satisfies/processes 29 complete and 3 partial GitHub pull requests (up to pull request RAKNET_78)
